--- a/src/styles/KeyboardBase.css
+++ b/src/styles/KeyboardBase.css
@@ -64,3 +64,27 @@
   background-color: var(--serenity-muted-selected);
   fill: var(--serenity-muted-selected);
 }
+
+
+.scale-boundary-svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 3;
+  overflow: visible;
+}
+
+.scale-boundary {
+  stroke: var(--serenity-scale-boundary-color);
+}
+
+.scale-boundary.linear {
+  stroke-width: 0.5;
+}
+
+.scale-boundary.circular {  
+  stroke-width: 2;
+}
