globalMode has its own context, advanced mode disables keys, react tests on different global modes.

--- a/src/styles/KeyboardBase.css
+++ b/src/styles/KeyboardBase.css
@@ -8,6 +8,12 @@
   border-color: var(--serenity-key-border-color);
 }
 
+:is(.key-base.disabled, .key-base.disabled path) {
+  cursor: not-allowed; 
+  pointer-events: none;
+  opacity: 1;
+}
+
 .key-base.root-note {
   border-color: var(--root-note-highlight);
 }
