--- a/src/styles/KeyboardBase.css
+++ b/src/styles/KeyboardBase.css
@@ -88,7 +88,8 @@
 }
 
 .scale-boundary.linear {
-  stroke-width: 0.5;
+  stroke-width: 2;
+  vector-effect: non-scaling-stroke;
 }
 
 .scale-boundary.circular {  
