--- a/styles/App.css
+++ b/styles/App.css
@@ -1,5 +1,5 @@
-@import "./Colors.css";
-@import 'bootstrap/dist/css/bootstrap.min.css';
+/* @import "./Colors.css"; */
+/* @import 'bootstrap/dist/css/bootstrap.min.css'; */
 
 body {
   margin: 0;
