--- a/styles/ChordNameDisplay.css
+++ b/styles/ChordNameDisplay.css
@@ -1,22 +1,25 @@
-.chord-name-display {
+.chord-display {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
+  align-items: left;
+  text-align: left;
+  width: 100%;
+  margin-top: 0px;
   gap: 0.5rem;
-  padding: 1rem;
-  background-color: var(--background-color);
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.chord-name-display-title {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: var(--text-color);
+.chord-name-description {
+  font-size: var(--settings-font-size);
+  text-align: left;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.chord-name-display-content {
+.chord-name-value {
   font-size: 1.5rem;
   font-weight: bold;
-  color: var(--primary-color);
-  text-align: center;
-} 
+  text-align: left;
+  margin-left: 5px;
+}
+
