--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -1,6 +1,9 @@
 :root {
   --h2wratio: 0.25; /* Height to width ratio of the linear keyboard */
   --white-keys-per-2-octaves: 14;
+  --white-key-width: calc(100% / var(--white-keys-per-2-octaves));
+  --black-key-width: calc(var(--white-key-width) * 0.7);
+  --keyboard-padding: 5px;
 }
 
 .keyboardlinear {
@@ -11,13 +14,19 @@
   max-width: var(--keyboardlinear-max-width);
   max-height: 100%;
   aspect-ratio: calc(1 / var(--h2wratio));
-  border: 1px solid var(--serenity-key-border-color);
+  padding: var(--keyboard-padding);
+}
+
+.keyboard-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .piano-key {
   position: absolute;
   box-sizing: border-box;
-  width: calc(100% / var(--white-keys-per-2-octaves));
+  width: var(--white-key-width);
   height: 100%;
   padding: 0 5px; /* Added padding to center the text */
   border: 1px solid var(--serenity-key-border-color);
@@ -37,7 +46,7 @@
   align-items: center;
   border: 2.0px solid var(--serenity-key-border-color);
   font-size: 0.8rem;
-  width: calc((100% / var(--white-keys-per-2-octaves)) * 0.7);
+  width: var(--black-key-width);
   height: 60%;
   
   justify-content: center;
@@ -47,8 +56,6 @@
   z-index: 2;
 }
 
-.piano-key.white.root-note,
-.piano-key.black.root-note,
 .piano-key.root-note {
   border: 2px solid var(--root-note-highlight);
 }
